[package]
name = "mikevsdan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
getopts = "0.2.21"
minijinja = "0.15.0"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
